<?xml version="1.0"?>
<package format="3">
  <name>third_challenge</name>
  <version>0.0.0</version>
  <discription>The third_challenge package</discription>
  <maintainer email="amsl@todo.todo">user</maintainer>
  <license>todo</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>ament_cmake</depend>
  <depend>rclcpp</depend>
  <depend>nav_msgs</depend>
  <depend>rclcpp_components</depend>
  <depend>roomba_500driver_meiji</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
