<?xml version="1.0"?>
<package format="3">
  <name>third_challenge</name>
  <version>0.0.0</version>
  <description>The third_challenge package</description>
  <maintainer email="amsl@todo.todo">user</maintainer>
  <license>APGL-3.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>ament_cmake</depend>
  <depend>rclcpp</depend>
  <depend>std_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>image_geometry</depend>
  <depend>rclcpp_components</depend>
  <depend>tf2_ros</depend>
  <depend>tf2_geometry_msgs</depend>
  <depend>roomba_500driver_meiji</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
